--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,3 +12,11 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+.margin-top-20 {
+	margin-top: 20px;
+}
+
+.font-size-16 {
+	font-size: 16pt;
+}
